# EduPod

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .migration-safety-allowlist  .prettierignore  1_behaviour-management-spec-v4-final.md  2_project_student_wellbeing_v3.md  3_project_staff_wellbeing_spec.md  AGENTS.md  ATTENDANCE_REVIEW.md  BUG-REPORT.md  CHANGELOG.md  CLAUDE.md  COVERAGE-CAMPAIGN.md  DEPLOYMENT-STATUS.md  EXCEL.xlsx  HEALTH-RECOVERY-TRACKER.md  HOMEWORK_MODULE_REVIEW.md  KIMI.md  Makefile  QA-ADMIN-TESTING-PLAN.md  QA-OWNER-REPORT.md  QA-RETEST-REPORT.md  README.md  ReportCard-WIP.md  SESSION-PROGRESS.md  SURGICAL-FIX.md  TEST_COVERAGE_SUMMARY.md  XXXstudents_import_template.xlsx  api-surface.snapshot.json  behaviour-management-spec-v3-complete.md  claude-vs-gpt-health-recovery-comparison.md  commitlint.config.cjs  docker-compose.parallel-test.yml  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  external-connections.md  gdpr-analysis.md  (+5 more)
apps/solver-py/: README.md  pyproject.toml  requirements.txt
apps/solver-py/scripts/: benchmark_realistic.py  benchmark_scale.py  benchmark_sched_041_phase_b.py  realistic_baseline.py
apps/solver-py/tests/: _builders.py  test_cancel.py  test_early_stop.py  test_greedy_hints.py  test_health.py  test_schema_roundtrip.py  test_schema_v3_roundtrip.py  test_solve_class_room_override.py  test_solve_cp_sat_status.py  test_solve_double_period.py  test_solve_feasible.py  test_solve_infeasible.py  test_solve_realistic_baseline.py  test_solve_soft_preferences.py  test_solve_supervision.py  (+4 more)
(+4850 files in other folders)
