[project]
name = "solver-py"
version = "0.1.0"
description = "OR-Tools CP-SAT scheduling sidecar for EduPod."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "ortools>=9.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["solver_py"]

[[tool.mypy.overrides]]
module = ["ortools.*"]
ignore_missing_imports = true

# ortools ships partial/inaccurate stubs that don't cover the PascalCase
# CpModel.NewBoolVar / Add / etc. methods — everything in files that use them
# gets attr-defined errors. Suppress in the two files that drive most of the
# CP-SAT model-building until ortools' stubs catch up.
[[tool.mypy.overrides]]
module = ["solver_py.solver.exam_solver", "solver_py.solver.main_solver"]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
